tests/negative/test_cn_asgn_arr_cn_elems.orb
fnc main() () {
    let array:(i32 cn 4) (arr (i32 4) 0 1 2 3);
    = ([] array 0) 100;
};